--- a/Honey/app/src/main/res/values/strings.xml
+++ b/Honey/app/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
-
     <string name="check_internet">인터넷 연결을 확인해주세요.</string>
     <string name="check_login">아이디 및 비밀번호를 입력해주세요</string>
     <string name="check_id">아이디를 입력해주세요</string>
@@ -52,6 +51,7 @@
     <string name="ingredient_count">수량 : 1</string>
     <string name="delete">삭제</string>
     <string name="cancel">취소</string>
+    <string name="no_buy_history">구매내역이 없습니다</string>
 
 
     <string name="first_TOS">제 1 조 (목적)
